--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     agent {
       node {
         // TODO: run this simple pipeline on jenkins 'master' node
+        label 'master'
       }
     }
 
@@ -23,9 +24,22 @@ pipeline {
             }
         }
 
-        // TODO: ADD A STAGE THAT SAYS HELLO
+        stage('stage 2') {
+            steps {
+    
+                sh 'echo hello!'
+           
+            }
+        }
 
-        // TODO: ADD AN APPROVAL STAGE
+
+        stage('userinput') {
+            steps {
+                script {
+                                input message: "Proceed?"
+                        }
+            }
+        }
 
         stage('stage 3') {
             steps {
