--- a/hello-java/Dockerfile
+++ b/hello-java/Dockerfile
@@ -17,7 +17,7 @@ ADD   https://github.com/RedHatTraining/DO288-apps/releases/download/OCP-4.1-1/h
 COPY  run-app.sh /opt/app-root/bin/
 
 RUN   chgrp -R 0 /opt/app-root && \
-      chmod -R 0 g=u  /opt/app-root
+      chmod -R g=u  /opt/app-root
 
 EXPOSE 8080
 
@@ -25,3 +25,4 @@ USER  1001
 
 # Run the fat JAR
 CMD   /opt/app-root/bin/run-app.sh
+
